add: setup mongo db connection

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 micronaut:
   application:
     name: quotesChallenge
+db:
+  name: "quotes"
+  collection: "quotes"
+mongodb:
+  uri: mongodb://localhost:27017/quotes
