--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,14 @@
 micronaut:
   application:
     name: quotesChallenge
+    http:
+      services:
+        quotes-garden:
+          url: https://quote-garden.onrender.com/
 db:
-  name: "quotes"
-  collection: "quotes"
+  name: quotes
+  collection: quotes
+quote-garden:
+  path: api/v3/quotes
 mongodb:
-  uri: mongodb://localhost:27017/quotes
+  uri: mongodb://localhost:27017/db
