--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,6 @@ db:
 quote-garden:
   path: api/v3/quotes
 mongodb:
-  uri: mongodb://localhost:27017/db
+  uri: mongodb://localhost:27017/quotes
+  packages:
+    - com.andrecastrosousa
